Use Logo in Header settings for Dutch Skin (Fix for" 'align dutch skin header with core and introduce top menu #57')
https://github.com/osgeonl/geonetwork-dutch-skin/issues/57

--- a/less/gn_header_dutch.less
+++ b/less/gn_header_dutch.less
@@ -6,12 +6,6 @@ header {
   padding-top: 10px;
   background-color: white;
 }
-@media (max-width: 320px) {
-  .branding a img {
-    height: 80%;
-    width: 80%;
-  }
-}
 [ng-app="gn_editor"], [ng-app="gn_admin"] {
   .gn-top-bar {
     margin-bottom: 10px;
