--- a/less/gn_navbar_dutch.less
+++ b/less/gn_navbar_dutch.less
@@ -85,7 +85,6 @@
 // dropdown in navigation menu
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  // color: @gray-base !important;
   background-color: @gn-menubar-background-active;
   padding-bottom: 1.2em !important;
 }
@@ -95,13 +94,6 @@
   background-color: @gn-menubar-background-active;
   padding-bottom: 1.2em !important;
 }
-// .navbar .dropdown-menu {
-//   padding: 0;
-//   border-radius: 0;
-//   border: 0;
-//   text-align: left;
-//   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-// }
 .navbar .dropdown-menu li a, .navbar .dropdown-menu li a:hover {
   padding: 10px 20px !important;
   &:hover {
@@ -163,12 +155,6 @@
   }
   .navbar-default .nav > li > a {
     color: #333 !important;
-  }
-  // smaller logo on smaller screens
-  .branding .gn-logo {
-    min-height: none !important;
-    max-height: 70px !important;
-    margin-top: 15px !important;
   }
   // no language selection on small screens
   .pull-right.contact-links {
